--- a/public/config.json
+++ b/public/config.json
@@ -64,9 +64,5 @@
       }
     ]
   },
-  "dateFormat": "MMMM YYYY",
-  "editLink": {
-    "radarLink": "https://github.com/AhmedKamal29/TechRadarTest",
-    "title": "Edit"
-  }
+  "dateFormat": "MMMM YYYY"
 }
