--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "prepare": "husky install && npm run build:scripts",
-    "start": "cross-env GENERATE_SOURCEMAP=false react-scripts start",
-    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "build:scripts": "tsc --project tsconfig.scripts.json",
     "test": "react-scripts test --watchAll=false",
     "ts:check": "tsc --noEmit",
