giving the blips padding of 15px

--- a/public/config.json
+++ b/public/config.json
@@ -2,7 +2,7 @@
   "quadrants": {
     "Evolution-Platforms": "Evolution Platforms",
     "Augmented-Customer-Experience": "Augmented Customer Experience",
-    "Platforms-Workplace-Togther": "Workplace Togther",
+    "Workplace-Together": "Workplace Together",
     "Smart-Industries": "Smart Industries"
   },
   "rings": [
